--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "vue3-perfect-scrollbar": "1.6.1",
     "vue3-print-nb": "0.1.4",
     "vuetify": "3.3.14",
+    "xterm": "^5.3.0",
     "yup": "1.2.0"
   },
   "devDependencies": {
