--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@guolao/vue-monaco-editor": "^1.5.4",
     "@tiptap/starter-kit": "2.1.7",
     "@tiptap/vue-3": "2.1.7",
     "apexcharts": "3.42.0",
@@ -32,6 +33,7 @@
     "vue3-print-nb": "0.1.4",
     "vuetify": "3.3.14",
     "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "yup": "1.2.0"
   },
   "devDependencies": {
