--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: npm install, build
         run: |
           npm install
           npm run build
+
+      - name: Inject Commit SHA
+        id: get_sha
+        run: |
+          echo "COMMIT_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
+          mkdir -p dist/assets
+          echo $COMMIT_SHA > dist/assets/version
+
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -19,8 +28,3 @@ jobs:
           path: |
             dist
             !dist/**/*.md
-      # - name: Archive code coverage results
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: code-coverage-report
-      #     path: output/test/code-coverage.html
