--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,18 +25,8 @@ jobs:
           mkdir -p dist/assets
           echo $COMMIT_SHA > dist/assets/version
           zip -r dist.zip dist
-          
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            自动发版。
-          draft: false
-          prerelease: false
-          files: |
-            dist.zip
+          bodyFile: "dist.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
