--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,16 +28,16 @@ jobs:
           echo ${{ github.ref }} > dist/assets/version
           zip -r dist.zip dist
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Upload to MinIO
+        uses: yakubique/minio-upload@v1.1.3
         with:
-          aws-access-key-id: ${{ secrets.MINIO_AK }}
-          aws-secret-access-key: ${{ secrets.MINIO_SK }}
           endpoint: ${{ secrets.MINIO_ENDPOINT }}
-
-      - name: Sync to MinIO
-        run: |
-          aws s3 sync dist.zip s3://${{ secrets.MINIO_BUCKET_NAME }}/releases/${{ github.ref }}/dist.zip --endpoint-url ${{ secrets.MINIO_ENDPOINT }}
+          access_key: ${{ secrets.MINIO_AK }}
+          secret_key: ${{ secrets.MINIO_SK }}
+          bucket: astrbot-dashboard
+          source: ./dist.zip
+          # Leading slash is required
+          target: '/releases/${{ github.ref_name }}/dist.zip'
 
       - name: Create Release
         uses: ncipollo/release-action@v1
